--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "compile": "npx hardhat compile && yarn compile:typechain",
     "compile:typechain": "yarn typechain --target ethers-v5 --out-dir ./build \"./artifacts/contracts/**/!(*.dbg).json\"",
-    "postinstall": "yarn compile",
+    "prepack": "yarn compile",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
